# sysen4

./: .gitignore  perf.data
01/: add  add.c  attendance  attendance.c  attendance.py  multiadd  multiadd.c  omp_hello  omp_hello.c  ompadd  ompadd.c
02/: assignment1  assignment1.c  assignment2  assignment2.c  assignment3  assignment3.c  attendance  attendance.c
03/: badcode  badcode.c  reduction  reduction.c
05/: assignment  assignment.c
06/: perf.data.old  postgres.yaml  pyproject.toml
06/raytracer/: Makefile  perf.data  raytracer  raytracer.c
08/: Dockerfile  perf.data  pyproject.toml  requirements.txt
08/config/: production.py
09/: attend.yaml
